--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Awsome Web Development Resources| Atlas Project</title>
+    <title>Handy Web Development Resources| Atlas Project</title>
     <!-- PRO/FREE FONTAWESOME -->
     <!-- ===========Font awesome icons =============== -->
     <link
@@ -55,7 +55,6 @@
     />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
