--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Web Development Resources | Atlas Project</title>
+    <title>Dev Resources | Atlas Project</title>
     <!-- PRO/FREE FONTAWESOME -->
     <!-- ===========Font awesome icons =============== -->
     <link
